<resources>
    <string name="app_name">Kotlin Khaos</string>
    <string name="app_slogan">Learn with us!</string>
    <string name="login_button">Login</string>
    <string name="forgetpassword_button">Reset</string>
    <string name="register_button">Register</string>
    <string name="login_go_to_signup"><u>New here? Click here to get started!</u></string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_password">Password</string>
    <string name="logout_button">Logout</string>
    <string name="title_home">Home</string>
    <string name="title_practice">Practice</string>
    <string name="title_profile">Profile</string>
    <string name="title_course">Course</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_forgot_password1">Forgot Password?</string>
    <string name="title_forgot_password2">Forgot Password</string>
    <string name="fab_add_a_quiz">Add a quiz</string>
    <string name="title_create_quiz">Create Quiz</string>
    <string name="title_quiz_details">Quiz Details</string>
    <string name="title_quiz_view_user_attempt">User Attempt</string>
    <string name="generate_quiz_button">Generate Quiz!</string>
    <string name="create_a_quiz">Create a quiz!</string>
    <string name="placeholder_quiz_name">Quiz Name</string>
    <string name="placeholder_quiz_prompt">Quiz Prompt</string>
    <string name="create_quiz_question_limit">Question Limit</string>
    <string name="quiz_question_card_question_number">Question %1$s</string>
    <string name="quiz_question_card_placeholder_question_number">Question 1</string>
    <string name="quiz_question_card_placeholder_question">1. Placeholder question</string>
    <string name="start_quiz_button">Start Quiz</string>
    <string name="next_question_button">Next Question</string>
    <string name="quiz_creation_action_bar_title">Quiz - %1$s</string>
    <string name="quiz_course_card_placeholder_quiz_name">Placeholder quiz name</string>
    <string name="quiz_course_card_view_quiz_details_button">View</string>
    <string name="quiz_course_card_start_quiz_button">Start</string>
    <string name="action_logout">Logout</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="student">Student</string>
    <string name="instructor">Instructor</string>
    <string name="greeting">Hi There,</string>
    <string name="compliment">Wow CSCI 4146 Student, you\'re on fire 🔥!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_the_email_address_you_wish_to_reset_the_password_for">Please enter the email you wish to reset</string>
    <string name="quiz_details_placeholder_quiz_name">Placeholder Quiz Name</string>
    <string name="quiz_user_attempt_card_view_attempt_button">View Attempt</string>
    <string name="quiz_user_attempt_card_placeholder_user_name">Placeholder Username</string>
    <string name="quiz_user_attempt_card_placeholder_score">10/10</string>
    <string name="end_quiz_button">End Quiz</string>
    <string name="change_profile_picture">Change</string>
    <string name="title_practice_attempt">Practice Quiz</string>
    <string name="i_want_to_learn">I want to learn</string>
    <string name="what_would_you_like_to_learn">What would you like to learn ✨?</string>
    <string name="custom_practice">Custom Practice</string>
    <string name="get_feedback_button">Get Feedback</string>
    <string name="next_button">Next</string>
    <string name="please_type_your_answer_here">Please type your answer here</string>
    <string name="question_loading">Loading...</string>
    <string name="quiz_question_number">Question %1$d</string>
    <string name="practice_quiz_feedback_for_question">Feedback for Question %1$d</string>
    <string name="quiz_question_number_final_score">%1$d/10</string>
    <string name="quiz_final_score">Final Score 🎉</string>
    <string name="student_profile_hi_there">Hi There,</string>
    <string name="title_create_course">Create Course</string>
    <string name="title_join_course">Join Course</string>
    <string name="done">Done!</string>
    <string name="create_your_class">Create your class!</string>
    <string name="placeholder_course_name">Course Name</string>
    <string name="placeholder_course_desc">Course Description</string>
    <string name="placeholder_education_level">Education Level</string>
    <string name="find_your_professor">Find your professor!</string>
    <string name="placeholder_professor_name">Professor Name</string>
    <string name="join">Join</string>
    <string name="search">Search</string>
    <string name="title_quiz_attempt">Quiz Attempt</string>
    <string name="go_back_home_button">Return to Home</string>
    <string name="instructor_profile_your_course">Your Course,</string>
    <string name="user_attempt_action_bar_title">%1$s\'s Attempt</string>
    <string name="back_button">Back</string>
</resources>