<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/student_main_navigation"
    app:startDestination="@+id/navigation_student_home">

    <fragment
        android:id="@+id/navigation_student_home"
        android:name="com.kotlinkhaos.ui.student.home.StudentHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_student_home">
        <action
            android:id="@+id/start_navigation_student_quiz_attempt"
            app:destination="@+id/navigation_student_quiz_attempt" />
    </fragment>

    <fragment
        android:id="@+id/navigation_student_practice"
        android:name="com.kotlinkhaos.ui.student.practice.StudentPracticeFragment"
        android:label="@string/title_practice"
        tools:layout="@layout/fragment_student_practice">
        <action
            android:id="@+id/start_navigation_practice_attempt"
            app:destination="@+id/navigation_student_practice_attempt" />
    </fragment>

    <fragment
        android:id="@+id/navigation_student_profile"
        android:name="com.kotlinkhaos.ui.student.profile.StudentProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_student_profile" />

    <fragment
        android:id="@+id/navigation_student_quiz_attempt"
        android:name="com.kotlinkhaos.ui.student.home.quiz.StudentQuizAttemptFragment"
        android:label="@string/title_quiz_attempt"
        tools:layout="@layout/fragment_student_quiz_attempt">
        <argument
            android:name="quizId"
            app:argType="string" />

        <action
            android:id="@+id/start_navigation_go_back_to_student_home"
            app:destination="@+id/navigation_student_home"
            app:popUpTo="@id/navigation_student_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_student_practice_attempt"
        android:name="com.kotlinkhaos.ui.student.practice.practiceQuiz.PracticeAttemptFragment"
        android:label="@string/title_practice_attempt"
        tools:layout="@layout/fragment_practice_attempt">
        <argument
            android:name="prompt"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_student_join_course"
        android:name="com.kotlinkhaos.ui.student.joinCourse.StudentJoinCourseFragment"
        android:label="@string/title_join_course"
        tools:layout="@layout/fragment_student_join_course">

        <action
            android:id="@+id/start_navigation_go_back_to_student_home"
            app:destination="@+id/navigation_student_home"
            app:popUpTo="@id/navigation_student_home" />
    </fragment>
</navigation>