<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.instructor.course.InstructorCourseFragment">

    <TextView
        android:id="@+id/createQuizTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/create_a_quiz"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputQuizName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createQuizTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputQuizName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_quiz_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputQuizPrompt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutInputQuizName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputQuizPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_quiz_prompt"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/questionLimitTextView"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/create_quiz_question_limit"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/quizQuestionLimitSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.slider.Slider
        android:id="@+id/quizQuestionLimitSlider"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:stepSize="1.0"
        android:value="3.0"
        android:valueFrom="1.0"
        android:valueTo="3.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutInputQuizPrompt"
        app:thumbColor="@color/blue"
        app:trackColorActive="@color/blue"
        app:trackColorInactive="@color/light_blue" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizQuestionLimitSlider" />

    <ProgressBar
        android:id="@+id/loadingQuizCreationProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/generateQuizButton"
        app:layout_constraintEnd_toEndOf="@+id/generateQuizButton"
        app:layout_constraintStart_toStartOf="@+id/generateQuizButton"
        app:layout_constraintTop_toTopOf="@+id/generateQuizButton" />

    <Button
        android:id="@+id/generateQuizButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/generate_quiz_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizQuestionLimitSlider" />

</androidx.constraintlayout.widget.ConstraintLayout>